# cardano-dapp-haskell-template

./: LICENSE  cabal.project  cardano-dapp-haskell-template.cabal  flake.nix
app/: Main.hs
src/: AuctionValidator.hs  Lib.hs  Run.hs
test/: Spec.hs
